# kontactinterface

./: .git-blame-ignore-revs  .gitlab-ci.yml  .kde-ci.yml  .pre-commit-config.yaml  .reviewboardrc  CMakeLists.txt  KF5KontactInterfaceConfig.cmake.in  KPimKontactInterfaceConfig.cmake.in  Mainpage.dox  REUSE.toml  config-kontactinterface.h.in  kontactinterface.categories  kontactinterface.renamecategories  metainfo.yaml
po/ar/: kontactinterfaces6.po
po/ast/: kontactinterfaces5.po  kontactinterfaces6.po
po/az/: kontactinterfaces6.po
po/bg/: kontactinterfaces5.po  kontactinterfaces6.po
po/bs/: kontactinterfaces6.po
po/ca/: kontactinterfaces6.po
po/ca@valencia/: kontactinterfaces5.po  kontactinterfaces6.po
po/cs/: kontactinterfaces6.po
po/da/: kontactinterfaces5.po  kontactinterfaces6.po
po/de/: kontactinterfaces5.po  kontactinterfaces6.po
po/el/: kontactinterfaces5.po  kontactinterfaces6.po
po/en_GB/: kontactinterfaces6.po
po/eo/: kontactinterfaces6.po
po/es/: kontactinterfaces6.po
po/et/: kontactinterfaces5.po  kontactinterfaces6.po
po/eu/: kontactinterfaces5.po  kontactinterfaces6.po
po/fa/: kontactinterfaces5.po  kontactinterfaces6.po
po/fi/: kontactinterfaces5.po  kontactinterfaces6.po
po/fr/: kontactinterfaces5.po  kontactinterfaces6.po
po/ga/: kontactinterfaces6.po
po/gl/: kontactinterfaces6.po
po/he/: kontactinterfaces5.po  kontactinterfaces6.po
po/hi/: kontactinterfaces5.po  kontactinterfaces6.po
po/hu/: kontactinterfaces6.po
po/ia/: kontactinterfaces6.po
po/is/: kontactinterfaces5.po  kontactinterfaces6.po
po/it/: kontactinterfaces6.po
po/ja/: kontactinterfaces5.po  kontactinterfaces6.po
po/ka/: kontactinterfaces6.po
po/kk/: kontactinterfaces6.po
po/km/: kontactinterfaces6.po
po/ko/: kontactinterfaces6.po
po/lt/: kontactinterfaces5.po  kontactinterfaces6.po
po/lv/: kontactinterfaces5.po  kontactinterfaces6.po
po/mr/: kontactinterfaces5.po  kontactinterfaces6.po
po/nb/: kontactinterfaces5.po  kontactinterfaces6.po
po/nds/: kontactinterfaces6.po
po/nl/: kontactinterfaces6.po
po/nn/: kontactinterfaces6.po
po/pa/: kontactinterfaces5.po  kontactinterfaces6.po
po/pl/: kontactinterfaces6.po
po/pt/: kontactinterfaces6.po
po/pt_BR/: kontactinterfaces6.po
po/ro/: kontactinterfaces6.po
po/ru/: kontactinterfaces5.po  kontactinterfaces6.po
po/sa/: kontactinterfaces5.po  kontactinterfaces6.po
po/sk/: kontactinterfaces5.po  kontactinterfaces6.po
po/sl/: kontactinterfaces5.po  kontactinterfaces6.po
po/sq/: kontactinterfaces5.po  kontactinterfaces6.po
po/sr/: kontactinterfaces5.po  kontactinterfaces6.po
po/sr@ijekavian/: kontactinterfaces6.po
po/sr@ijekavianlatin/: kontactinterfaces6.po
po/sr@latin/: kontactinterfaces6.po
po/sv/: kontactinterfaces5.po  kontactinterfaces6.po
po/tr/: kontactinterfaces5.po  kontactinterfaces6.po
po/ug/: kontactinterfaces6.po
po/uk/: kontactinterfaces5.po  kontactinterfaces6.po
po/vi/: kontactinterfaces5.po  kontactinterfaces6.po
po/wa/: kontactinterfaces6.po
po/zh_CN/: kontactinterfaces5.po  kontactinterfaces6.po
po/zh_TW/: kontactinterfaces6.po
src/: CMakeLists.txt  Messages.sh  core.cpp  core.h  kontactinterface-index.qdoc  kontactinterface.qdoc  kontactinterface.qdocconf  kontactinterface_debug.cpp  kontactinterface_debug.h  kontactplugin.desktop  pimuniqueapplication.cpp  pimuniqueapplication.h  plugin.cpp  plugin.h  processes.cpp  processes.h  summary.cpp  summary.h  uniqueapphandler.cpp  uniqueapphandler.h
